# oneshot-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md  architecture.txt
src/: lib.rs  main.rs  sample.rs  test.rs
src/data/: mod.rs
src/network/: layers.rs  mod.rs
src/sample/: mod.rs  two.rs
