[package]
name = "oneshot-rs"
version = "0.1.0"
authors = ["leglesslamb <wu.rupert@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
ndarray-image = { git = 'https://github.com/rust-cv/ndarray-image' }

[lib]
name = "oneshot"
path = "src/lib.rs"

[[bin]]
name = "oneshot"
path = "src/main.rs"

[dependencies]
image = "0.23.2"
ndarray-image = "0.2.1"
ndarray = { version = "0.13.0", default-features = false }
rand = "0.7.3"
structopt = "0.3.12"
walkdir = "2.3.1"


