[package]
name = "one-shot"
version = "0.1.0"
authors = ["leglesslamb <wu.rupert@outlook.com>"]
edition = "2018"
description = "A Rust implementation of Siamese Neural Networks for One-shot Image Recognition for benchmarking performance and results."
repository = "https://github.com/UTMIST/oneshot-rs"
readme = "README.md"
categories = ["science"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
ndarray-image = { git = 'https://github.com/rust-cv/ndarray-image' }

[dependencies]
autograd = { version = "1.0.3", features = ["mkl"] }
image = "0.23.2"
intel-mkl-src = { version="0.2.5", optional = true, default-features = true }
ndarray-image = "0.2.1"
ndarray = { version = "0.12.1", default-features = false }
rand = "0.7.3"
structopt = "0.3.12"
walkdir = "2.3.1"

[features]
mkl = ["intel-mkl-src"]


[lib]
name = "oneshot"
path = "src/lib.rs"

[[bin]]
name = "oneshot"
path = "src/main.rs"
